Ensure all characters are plain text compatible

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
 <!--[if lt IE 7]>
   <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7">
 <![endif]-->
@@ -17,10 +17,10 @@
 
   <head>
 <!--= BASIC PAGE NEEDS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Web Application | Title</title>
+    <title>Ali Esmaili | Portfolio | v1.0</title>
     <meta name="author" content="Ali Esmaili">
     <meta name="keywords" content="Ruby, JavaScript, Rails,
     Ruby on Rails, Sinatra, HTML, HTML5, CSS, CSS3, Sass, Haml,
@@ -44,24 +44,24 @@
     <meta name="theme-color" content="#FFFFFF">
 
 <!--= MOBILE SPECIFIC METAS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--= FONTS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Prata">
 
 <!--= STYLE SHEETS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
 
 <!--= FAVICON
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <link rel="icon" type="image/png" href="public/images/favicon.png">
   </head>
 
 <!--= PRIMARY PAGE LAYOUT
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
   <body>
     <!--[if lt IE 7]>
       <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p>
@@ -115,11 +115,11 @@
     </div>
 
 <!--= SCRIPTS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <script type="text/javascript" src="public/js/main.js"></script>
 
 <!--= GOOGLE ANALYTICS
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -131,6 +131,6 @@
     </script>
 
 <!--= END OF DOCUMENT
-=–––––––––––––––––––––––––––––––––––––––––––––––––-->
+============================================================-->
   </body>
 </html>
