Manage spacing between words and links, decrease margins, re-order links

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     <![endif]-->
 
     <div class="container row">
-      <header role="banner" class="margin-ends_large row text-align_center">
+      <header role="banner" class="margin-caps_large row text-align_center">
         <h1 class="column extent_12 main_font text-size_large">Ali Esmaili</h1>
 
         <span class="display_block main_font rift row text-color_cool text-size_small">
           <span class="column extent_04">Developer.</span>
           <span class="column extent_04">Builder.</span>
-          <span class="column extent_04">Action Verb.</span>
+          <span class="column extent_04">Action Verber.</span>
         </span>
       </header>
 
@@ -84,10 +84,13 @@
 
           <ul class="list-bullets_none rift row text-align_center">
             <li class="column extent_02">
-              <a href="http://twitter.com/SuitAndCape" class="main_font text-color_cool text-size_small">twitter</a>
+              <a href="~URL~" class="main_font text-color_cool text-size_small">about</a>
             </li>
             <li class="column extent_02">
               <a href="mailto:AESM85@gmail.com" class="main_font text-color_cool text-size_small">email</a>
+            </li>
+            <li class="column extent_02">
+              <a href="http://twitter.com/SuitAndCape" class="main_font text-color_cool text-size_small">twitter</a>
             </li>
             <li class="column extent_02">
               <a href="http://www.linkedin.com/in/SuitAndCape" class="main_font text-color_cool text-size_small">linkedin</a>
@@ -97,9 +100,6 @@
             </li>
             <li class="column extent_02">
               <a href="~URL~" class="main_font text-color_cool text-size_small">résumé</a>
-            </li>
-            <li class="column extent_02">
-              <a href="~URL~" class="main_font text-color_cool text-size_small">about</a>
             </li>
           </ul>
         </article>
