Add headshot image, add styling to headshot

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
     <div class="container row">
       <header role="banner" class="margin-caps_large row text-align_center">
+        <img class="headshot" src="public/images/SuitAndCape_Headshot.jpg">
+
         <h1 class="column extent_12 main_font text-size_large">Ali Esmaili</h1>
 
         <span class="display_block main_font rift row text-color_cool text-size_small">
