Commit on master, because I'm a monster

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
       <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p>
     <![endif]-->
 
-    <div class="container row">
+    <div class="row" id="container">
       <header role="banner" class="margin-caps_large row text-align_center">
         <img class="headshot" src="public/images/SuitAndCape_Headshot.jpg">
 
-        <h1 class="column extent_12 main_font text-size_large">Ali Esmaili</h1>
+        <h1 class="column extent_12 header_one main_font text-size_large">Ali Esmaili</h1>
 
         <span class="display_block main_font rift row text-color_cool text-size_small">
           <span class="column extent_04">Developer.</span>
