Open new tab when twitter, linkedin, github, and resume links are clicked

--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
 
           <ul class="list-bullets_none rift row text-align_center">
             <li class="column extent_02">
-              <a href="~URL~" class="main_font text-color_cool text-size_small">about</a>
+              <a class="main_font text-color_cool text-size_small" href="~URL~">about</a>
             </li>
             <li class="column extent_02">
-              <a href="mailto:AESM85@gmail.com" class="main_font text-color_cool text-size_small">email</a>
+              <a class="main_font text-color_cool text-size_small" href="mailto:AESM85@gmail.com">email</a>
             </li>
             <li class="column extent_02">
-              <a href="http://twitter.com/SuitAndCape" class="main_font text-color_cool text-size_small">twitter</a>
+              <a class="main_font text-color_cool text-size_small" href="http://twitter.com/SuitAndCape" target="_blank">twitter</a>
             </li>
             <li class="column extent_02">
-              <a href="http://www.linkedin.com/in/SuitAndCape" class="main_font text-color_cool text-size_small">linkedin</a>
+              <a class="main_font text-color_cool text-size_small" href="http://www.linkedin.com/in/SuitAndCape" target="_blank">linkedin</a>
             </li>
             <li class="column extent_02">
-              <a href="http://github.com/AESM" class="main_font text-color_cool text-size_small">github</a>
+              <a class="main_font text-color_cool text-size_small" href="http://github.com/AESM" target="_blank">github</a>
             </li>
             <li class="column extent_02">
-              <a href="~URL~" class="main_font text-color_cool text-size_small">résumé</a>
+              <a href="public/resume/Ali_Esmaili-Resume.pdf"  target="_blank" class="main_font text-color_cool text-size_small">résumé</a>
             </li>
           </ul>
         </article>
