--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 ============================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ali Esmaili | Portfolio | v1.0</title>
+    <title>Ali Esmaili | Web Developer | v1.0</title>
     <meta name="author" content="Ali Esmaili">
+    <link rel="author" type="text/plain" href="humans.txt" />
     <meta name="keywords" content="Ruby, JavaScript, Rails,
     Ruby on Rails, Sinatra, HTML, HTML5, CSS, CSS3, Sass, Haml,
     AJAX, jQuery, AngularJS, Angular, SQL, PostgreSQL, Ionic,
@@ -40,7 +41,7 @@
     Campbell, San Jose, SJ, San Francisco, SF">
     <meta name="description" content="Ali Esmaili is a web
     developer, UI designer, Ruby & JavaScript enthusiast, with
-    a passion for dancing like a possessed Autobot.">
+    a passion for dancing like an Autobot possessed.">
     <meta name="theme-color" content="#FFFFFF">
 
 <!--= MOBILE SPECIFIC METAS
@@ -69,6 +70,7 @@
 
     <div class="row" id="container">
       <header role="banner" class="margin-caps_large row text-align_center">
+        <!-- <a href="index.html"></a> -->
         <img class="headshot" src="public/images/SuitAndCape_Headshot.jpg">
 
         <h1 class="column extent_12 header_one main_font text-size_large">Ali Esmaili</h1>
@@ -112,7 +114,9 @@
       </main>
 
       <footer role="contentinfo" class="row">
-        <!-- <small id="copyright"><a href="URL">&copy; Ali-Bo-Bally</a></small> -->
+        <!-- <small id="copyright">
+          <a href="URL">&copy; Ali-Bo-Bally</a>
+        </small> -->
       </footer>
     </div>
 
