--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<!-- projects.html -->
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
@@ -20,7 +21,7 @@
 ============================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ali Esmaili | Web Developer | v1.0</title>
+    <title>Ali Esmaili | Projects | v1.0</title>
     <meta name="author" content="Ali Esmaili">
     <link rel="author" type="text/plain" href="humans.txt">
     <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF">
@@ -53,7 +54,6 @@
     <!--[if lt IE 7]>
       <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p>
     <![endif]-->
-
     <div class="container">
       <header role="banner" class="margin-top_medium text-align_center">
         <div class="row wrapper">
@@ -64,21 +64,67 @@
           </a>
 
           <span class="display_block main_font rift row text-color_cool text-size_small">
-            <span class="column extent_04 index">Developer.</span>
+            <!-- <span class="column extent_04 index">Developer.</span>
             <span class="column extent_04 index">Builder.</span>
-            <span class="column extent_04 index">Action Verber.</span>
+            <span class="column extent_04 index">Action Verber.</span> -->
+            <h2 class="index main_font text-align_center text-size_medium">Projects.</h2>
           </span>
         </div>
       </header>
 
       <main role="main">
         <article class="column extent_12">
-          <section class="row wrapper">
-            <h2 class="index main_font margin-top_medium text-align_center text-size_medium">More Things:</h2>
+          <section class="row wrapper_projects">
 
+            <div class="animated fadeInUp index single_project row">
+                <div class="project_image">
+                  <div class="project_overlay"></div>
+                  <!-- <img src="public/images/projects/OurHouse-320x320.png" alt="OurHouse screenshot" class="project_img">OurHouse.mp4 -->
+                  <video width="320" height="560" autoplay loop class="project_img">
+                    <source src="public/videos/OurHouse.mp4" type="video/mp4">
+                  </video>
+                </div>
+              <div class="project_commentary main_font text-size_small">
+                <!-- <a href="URL.html"> --><h3 class="project_title text-color_warm">OurHouse:</h3><!-- </a> -->
+                <div>
+                  <p class="project_blurb">
+                    This iOS and Android mobile app makes coordinating social events, household chores, and payments among your fellow housemates incredibly simple.  Using a decoupled architecture, the front-end was built with Angular, Ionic, JavaScript, jQuery, HTML5, and CSS3; while the back-end was built using Rails, Auth0, the Google+ API, and the Venmo API.
+                  </p>
+                  <p class="project_blurb">
+                    Through the Home tab, the user can respond to or delete messages, and filter messages by type: tasks, notifications, and activitiy invitations.  Unread messages are marked.
+                  </p>
+                  <p class="project_blurb">
+                    Through the Message tab, a user can send any of type of message to the other members of the House.  Through the payments tab, a user can connect to Venmo and send money to any of the House members.
+                  </p>
+                  <p class="project_blurb">
+                    The Housemates tab allows the user to view every housemate's profile.  A message histroy dashboard can be opened by clicking the profile picture, and adding new housemates via email is easy.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+<!--             <div class="animated fadeInUp index single_project row">
+                <div class="project_image">
+                  <a href="projects/NAME.html"><div class="project_overlay"></div></a>
+                  <img src="public/images/projects/NAME-320x320.png" alt="NAME screenshot" class="project_img">
+                </div>
+              <div class="project_commentary main_font text-size_small">
+                <a href="projects/NAME.html"><h3 class="project_title text-color_warm">NAME:</h3></a>
+                <p class="project_blurb">
+                  Stuff StuffStuffStuff Stuff Stuff StuffStuffStuffStuff S t u f f Stuff StuffStuff Stuff Stuff Stuff
+                    <br><br>
+                  Stuff Stuff S t u f f Stuff Stuff Stuff StuffStuff StuffStuff StuffStuffStuffStuff Stuff Stuff Stuff
+                </p>
+              </div>
+            </div>
+ -->
+          </section>
+
+          <section class="row wrapper">
             <ul class="content_list list-bullets_none rift row text-align_center">
               <li class="column extent_03">
                 <a id="gel_trigger" class="main_font text-color_cool text-size_small">about</a>
+                <!-- <a id="ourhouse_trigger" class="main_font text-color_cool text-size_small">about</a> -->
               </li>
               <li class="column extent_03">
                 <!-- <a id="projects_trigger" class="main_font text-color_cool text-size_small">projects</a> -->
@@ -112,7 +158,7 @@
           </section>
         </article>
 
-<!--         <aside role="complementary" class="column extent_04">
+        <!-- <aside role="complementary" class="column extent_04">
           Secondary Content
         </aside> -->
       </main>
@@ -126,15 +172,6 @@
       </footer> -->
     </div> <!-- /container -->
 
-<!--= PROJECTS (WIP)
-============================================================-->
-<!--         <span class="column extent_12 main_font projects text-align_center">
-          <h1>Projects</h1>
-          <span>
-            <h1>Sup?</h1>
-          </span>
-        </span> -->
-
 <!--= ABOUT OVERLAY
 ============================================================-->
     <div class="gel gel_screen">
@@ -142,9 +179,9 @@
         <h1 class="gel_title main_font">About</h1>
         <div class="gel_content">
           <p class="main_font">I'm a full-stack web developer who loves to make beautiful, thoughtful, and meaningful things; both digital and physical.
-          <br><br>
+            <br><br>
           I have always been driven by playful curiosity.  I build, I tinker, I research, I embrace confusion challenges present, allowing me to solve problems I have never encountered before and to understand the underlying "why."
-          <br><br>
+            <br><br>
           My current favorite technologies and frameworks are Ruby, Rails, JavaScript, Angular, jQuery, and Ionic.</p>
           <button type="button" class="gel_screen_close"></button>
         </div>
@@ -155,6 +192,7 @@
 ============================================================-->
     <script type="text/javascript" src="public/js/classie.js"></script>
     <script type="text/javascript" src="public/js/gel_script.js"></script>
+    <script type="text/javascript" src="public/js/projects_script.js"></script>
     <script type="text/javascript" src="public/js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="public/js/nav_script.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
