Remove project_overlay so that video can be played from hand held devices

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
 
             <div class="animated fadeInUp index single_project row">
                 <div class="project_image">
-                  <div class="project_overlay"></div>
+                  <!-- <div class="project_overlay"></div> -->
                   <!-- <img src="public/images/projects/OurHouse-320x320.png" alt="OurHouse screenshot" class="project_img">OurHouse.mp4 -->
                   <video width="320" height="560" autoplay loop class="project_img">
                     <source src="public/videos/OurHouse.mp4" type="video/mp4">
