--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
                     Through the Home tab, the user can respond to or delete messages, and filter messages by type: tasks, notifications, and activitiy invitations.  Unread messages are marked.
                   </p>
                   <p class="project_blurb">
-                    Through the Message tab, a user can send any of type of message to the other members of the House.  Through the payments tab, a user can connect to Venmo and send money to any of the House members.
+                    Through the Message tab, a user can send any type of message to the other members of the House.  Through the payments tab, a user can connect to Venmo and send money to any of the House members.
                   </p>
                   <p class="project_blurb">
                     The Housemates tab allows the user to view every housemate's profile.  A message histroy dashboard can be opened by clicking the profile picture, and adding new housemates via email is easy.
