--- a/projects.html
+++ b/projects.html
@@ -88,17 +88,26 @@
                 <!-- <a href="URL.html"> --><h3 class="project_title text-color_warm">OurHouse:</h3><!-- </a> -->
                 <div>
                   <p class="project_blurb">
-                    This iOS and Android mobile app makes coordinating social events, household chores, and payments among your fellow housemates incredibly simple.  Using a decoupled architecture, the front-end was built with Angular, Ionic, JavaScript, jQuery, HTML5, and CSS3; while the back-end was built using Rails, Auth0, the Google+ API, and the Venmo API.
+                    OurHouse is a mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.  It was built using a decoupled architecture: the front-end with Angular, Ionic, JavaScript, jQuery, HTML5, and CSS3, and the back-end using Rails, with features from Auth0, the Google+ API, and the Venmo API.
                   </p>
                   <p class="project_blurb">
-                    Through the Home tab, the user can respond to or delete messages, and filter messages by type: tasks, notifications, and activitiy invitations.  Unread messages are marked.
+                    The functionality of the app is contained within a sleek and intuitive interface, divided into four main sections:
                   </p>
                   <p class="project_blurb">
-                    Through the Message tab, a user can send any type of message to the other members of the House.  Through the payments tab, a user can connect to Venmo and send money to any of the House members.
+                    <strong>Home</strong>: Respond to and delete tasks, notifications, and activity invitations from other housemates, with support for filtering by message type.<br>
+                    <strong>Message</strong>: Send any type of message to the other members of the house.<br>
+                    <strong>Payments</strong>: Connect to Venmo and send money to any of the house members.<br>
+                    <strong>Housemates</strong>: Add new housemates and view the profiles and message history of existing housemates.
+                  </p>
+<!--                   <p class="project_blurb">
+                    Message: a user can send any type of message to the other members of the House.
                   </p>
                   <p class="project_blurb">
-                    The Housemates tab allows the user to view every housemate's profile.  A message histroy dashboard can be opened by clicking the profile picture, and adding new housemates via email is easy.
+                    Payments: a user can connect to Venmo and send money to any of the House members.
                   </p>
+                  <p class="project_blurb">
+                    Housemates: allows the user to view every housemate's profile.  A message histroy dashboard can be opened by clicking the profile picture, and adding new housemates via email is easy.
+                  </p> -->
                 </div>
               </div>
             </div>
