--- a/index.html
+++ b/index.html
@@ -1,177 +1,78 @@
+<!-- index.html -->
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
-============================================================-->
-<!--[if lt IE 7]>
-  <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7">
-<![endif]-->
-<!--[if IE 7]>
-  <html lang="en" class="no-js lt-ie9 lt-ie8">
-<![endif]-->
-<!--[if IE 8]>
-  <html lang="en" class="no-js lt-ie9">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-<html lang="en" class="no-js">
-<!--<![endif]-->
+=============================================================-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 
   <head>
-<!--= BASIC PAGE NEEDS
-============================================================-->
+<!--= BASIC PAGE INFO
+=============================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ali Esmaili | Web Developer | v1.0</title>
+    <title>Ali Esmaili | HTML Template</title>
     <meta name="author" content="Ali Esmaili">
     <link rel="author" type="text/plain" href="humans.txt">
-    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF">
-    <meta name="description" content="Ali Esmaili is a web
-    developer, UI designer, and Ruby and JavaScript enthusiast,
-    with a passion for dancing like an robot possessed.">
+    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, Handlebars, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF">
+    <meta name="description" content="Description of site.">
     <meta name="theme-color" content="#FFFFFF">
 
+<!--= OPEN GRAPH DATA
+=============================================================-->
+    <meta property="og:title" content="Ali Esmaili | HTML Template">
+    <meta property="og:type" content="template">
+    <meta property="og:url" content="~URL~">
+    <!-- <meta property="og:image" content="http://suitandcape.github.io/public/images/SuitAndCape_Headshot.jpg"> -->
+    <meta property="og:description" content="Description of site.">
+    <meta property="og:site_name" content="Ali Esmaili | HTML Template">
+
 <!--= MOBILE SPECIFIC METAS
-============================================================-->
+=============================================================-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!--= FONTS
-============================================================-->
+=============================================================-->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Prata">
 
 <!--= STYLE RESOURCES
-============================================================-->
+=============================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <script type="text/javascript" src="public/js/modernizr.custom.overlay.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
 
 <!--= TOOLBAR FAVICON
-============================================================-->
+=============================================================-->
     <link rel="icon" type="image/png" href="public/images/favicons/toolbar-16x16.png">
   </head>
 
 <!--= PRIMARY PAGE LAYOUT
-============================================================-->
+=============================================================-->
   <body>
     <!--[if lt IE 7]>
-      <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p>
-    <![endif]-->
-
-    <div class="container">
-      <header role="banner" class="margin-top_medium text-align_center">
-        <div class="row wrapper">
-          <a href="index.html" id="home_trigger">
-            <img src="public/images/SuitAndCape_Headshot.jpg" alt="Photograph of Ali Esmaili" class="index profile_photo" >
-
-            <h1 class="column extent_12 header_one main_font text-size_large">Ali Esmaili</h1>
-          </a>
-
-          <span class="display_block main_font rift row text-color_cool text-size_small">
-            <span class="column extent_04 index">Developer.</span>
-            <span class="column extent_04 index">Builder.</span>
-            <span class="column extent_04 index">Action Verber.</span>
-          </span>
-        </div>
-      </header>
-
-      <main role="main">
-        <article class="column extent_12">
-          <section class="row wrapper">
-            <h2 class="index main_font margin-top_medium text-align_center text-size_medium">More Things:</h2>
-
-            <ul class="content_list list-bullets_none rift row text-align_center">
-              <li class="column extent_03">
-                <a id="gel_trigger" class="main_font text-color_cool text-size_small">about</a>
-              </li>
-              <li class="column extent_03">
-                <!-- <a id="projects_trigger" class="main_font text-color_cool text-size_small">projects</a> -->
-                <a href="projects.html" class="main_font text-color_cool text-size_small">projects</a>
-              </li>
-              <li class="column extent_03">
-                <a href="public/resume/Ali_Esmaili-Resume.pdf"  target="_blank" class="main_font text-color_cool text-size_small">résumé</a>
-              </li>
-              <li class="column extent_03">
-                <a href="mailto:AESM85@gmail.com" class="main_font text-color_cool text-size_small">email</a>
-              </li>
-            </ul>
-
-            <ul class="list-bullets_none row text-align_center">
-              <li class="column extent_12">
-                <a href="http://www.linkedin.com/in/SuitAndCape" target="_blank" class="main_font text-color_cool text-size_small">
-                  <img src="public/images/icons/linkedin_plain-256x256.png" alt="linkedin" class="icons">
-                </a>
-  <!--             </li>
-              <li class="column extent_04"> -->
-                <a href="http://www.github.com/AESM" target="_blank" class="main_font text-color_cool text-size_small">
-                  <img src="public/images/icons/github_plain-256x256.png" alt="github" class="icons">
-                </a>
-  <!--             </li>
-              <li class="column extent_04"> -->
-                <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="main_font text-color_cool text-size_small">
-                  <img src="public/images/icons/twitter_plain-256x256.png" alt="twitter" class="icons">
-                </a>
-              </li>
-            </ul>
-          </section>
-        </article>
-
-<!--         <aside role="complementary" class="column extent_04">
-          Secondary Content
-        </aside> -->
-      </main>
-
-<!--       <footer role="contentinfo">
-        <div class="row wrapper">
-          <small id="copyright">
-            <a href="URL">&copy; Ali-Bo-Bally</a>
-          </small>
-        </div>
-      </footer> -->
-    </div> <!-- /container -->
-
-<!--= PROJECTS (WIP)
-============================================================-->
-<!--         <span class="column extent_12 main_font projects text-align_center">
-          <h1>Projects</h1>
-          <span>
-            <h1>Sup?</h1>
-          </span>
-        </span> -->
-
-<!--= ABOUT OVERLAY
-============================================================-->
-    <div class="gel gel_screen">
-      <div class="gel_box">
-        <h1 class="gel_title main_font">About</h1>
-        <div class="gel_content">
-          <p class="main_font">I'm a full-stack web developer who loves to make beautiful, thoughtful, and meaningful things; both digital and physical.
-          <br><br>
-          I have always been driven by playful curiosity.  I build, I tinker, I research, I embrace confusion challenges present, allowing me to solve problems I have never encountered before and to understand the underlying "why."
-          <br><br>
-          My current favorite technologies and frameworks are Ruby, Rails, JavaScript, Angular, jQuery, and Ionic.</p>
-          <button type="button" class="gel_screen_close"></button>
-        </div>
-      </div>
-    </div>
+      <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
 <!--= SCRIPTS
-============================================================-->
-    <script type="text/javascript" src="public/js/classie.js"></script>
-    <script type="text/javascript" src="public/js/gel_script.js"></script>
-    <script type="text/javascript" src="public/js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="public/js/nav_script.js"></script>
+=============================================================-->
     <script type="text/javascript" src="public/js/main.js"></script>
+    <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
 
 <!--= GOOGLE ANALYTICS
-============================================================-->
+=============================================================-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-61163251-1', 'auto');
+      // ga('create', 'UA-XXXXXXXX-X', 'auto');
       ga('send', 'pageview');
     </script>
 
 <!--= END OF DOCUMENT
-============================================================-->
+=============================================================-->
   </body>
 </html>
