Tidy up development branch.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 =============================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Ali Esmaili | HTML Template</title>
+    <title>Ali Esmaili | Web Developer | SuitAndCape</title>
     <meta name="author" content="Ali Esmaili">
     <link rel="author" type="text/plain" href="humans.txt">
-    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, Handlebars, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF">
-    <meta name="description" content="Description of site.">
+    <meta name="keywords" content="Ruby, JavaScript, Rails, HTML, CSS, Sass, Haml, Handlebars, AJAX, jQuery, Angular, SQL, PostgreSQL, Ionic, React, Web, Developer, Development, Design, Responsive, Mobile First, User Experience, UX, User Interface, UI, Test-Driven, Behavior-Driven, CCNA, Networking, SuitAndCape, AESM, Al E, Ali Esmaili, Full-Stack, Front-End, Back-End, California, CA, Bay Area, San Jose, SJ, San Francisco, SF, portfolio">
+    <meta name="description" content="Ali Esmaili is a web
+    developer, UI designer, Ruby and JavaScript enthusiast,
+    with a passion for dancing like an robot possessed.">
     <meta name="theme-color" content="#FFFFFF">
 
 <!--= OPEN GRAPH DATA
 =============================================================-->
-    <meta property="og:title" content="Ali Esmaili | HTML Template">
-    <meta property="og:type" content="template">
-    <meta property="og:url" content="~URL~">
+    <meta property="og:title" content="Ali Esmaili | Web Developer | SuitAndCape">
+    <meta property="og:type" content="portfolio">
+    <meta property="og:url" content="http://SuitAndCape.github.io/">
     <!-- <meta property="og:image" content="http://suitandcape.github.io/public/images/SuitAndCape_Headshot.jpg"> -->
-    <meta property="og:description" content="Description of site.">
-    <meta property="og:site_name" content="Ali Esmaili | HTML Template">
+    <meta property="og:description" content="Ali Esmaili is a web
+    developer, UI designer, Ruby and JavaScript enthusiast,
+    with a passion for dancing like an robot possessed.">
+    <meta property="og:site_name" content="Ali Esmaili | Web Developer | SuitAndCape">
 
 <!--= MOBILE SPECIFIC METAS
 =============================================================-->
@@ -68,7 +72,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      // ga('create', 'UA-XXXXXXXX-X', 'auto');
+      // ga('create', 'UA-61163251-1', 'auto');
       ga('send', 'pageview');
     </script>
 
