Complete User Stories, MVP list, & Pseudocode; create design test suite

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
-=============================================================-->
+=======================================================================-->
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -10,7 +10,7 @@
 
   <head>
 <!--= BASIC PAGE INFO
-=============================================================-->
+=======================================================================-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Ali Esmaili | Web Developer | SuitAndCape</title>
@@ -23,49 +23,92 @@
     <meta name="theme-color" content="#FFFFFF">
 
 <!--= OPEN GRAPH DATA
-=============================================================-->
+=======================================================================-->
     <meta property="og:title" content="Ali Esmaili | Web Developer | SuitAndCape">
     <meta property="og:type" content="portfolio">
     <meta property="og:url" content="http://SuitAndCape.github.io/">
-    <!-- <meta property="og:image" content="http://suitandcape.github.io/public/images/SuitAndCape_Headshot.jpg"> -->
+    <meta property="og:image" content="http://suitandcape.github.io/public/images/ogi/open_graph_image.jpg">
     <meta property="og:description" content="Ali Esmaili is a web
     developer, UI designer, Ruby and JavaScript enthusiast,
     with a passion for dancing like an robot possessed.">
     <meta property="og:site_name" content="Ali Esmaili | Web Developer | SuitAndCape">
 
 <!--= MOBILE SPECIFIC METAS
-=============================================================-->
+=======================================================================-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <!--= FONTS
-=============================================================-->
+=======================================================================-->
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Prata">
 
 <!--= STYLE RESOURCES
-=============================================================-->
+=======================================================================-->
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="public/css/alimations.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="public/css/design_tests.css">
 
 <!--= TOOLBAR FAVICON
-=============================================================-->
+=======================================================================-->
     <link rel="icon" type="image/png" href="public/images/favicons/toolbar-16x16.png">
   </head>
 
+<!--= DESIGN TESTS
+=======================================================================-->
+    <!--===== ONLY UNCOMMENT FOR DESIGN TESTING =====-->
+<!--     <div class="design_test">
+      <a class="test_button" href="javascript: (function() {
+        document.body.setAttribute('style',
+          'filter: url(data: image/svg+xml;
+          base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxmaWx0ZXIgaWQ9J2dyYXlzY2FsZSc%2BPGZlQ29sb3JNYXRyaXggdHlwZT0nbWF0cml4JyB2YWx1ZXM9JzAuMzMzMyAwLjMzMzMgMC4zMzMzIDAgMCAwLjMzMzMgMC4zMzMzIDAuMzMzMyAwIDAgMC4zMzMzIDAuMzMzMyAwLjMzMzMgMCAwIDAgMCAwIDEgMCcvPjwvZmlsdGVyPjwvc3ZnPg%3D%3D#grayscale);
+          -webkit-transform: translateZ(0);
+          -webkit-filter: grayscale(1);
+          filter: grayscale(1);'
+        );
+      }) ();">Desaturation Test</a>
+      <a class="test_button" href="javascript: (function() {
+        document.body.setAttribute('style',
+          'filter: url(data: image/svg+xml;
+          base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxmaWx0ZXIgaWQ9J2JsdXInPjxmZUdhdXNzaWFuQmx1ciBzdGREZXZpYXRpb249JzEwJyAvPjwvZmlsdGVyPjwvc3ZnPg%3D%3D#blur);
+          -webkit-filter:blur(10px);
+          filter: blur(10px);'
+        );
+      }) ();">Blur Test</a>
+      <a class="test_button" href="javascript: (function () {
+        document.body.setAttribute('style',
+          '-webkit-transform:rotate(180deg);
+          -moz-transform:rotate(180deg);
+          transform:rotate(180deg);'
+        );
+      }) ();">Flip Test</a>
+      <a class="test_button" href="javascript: (function () {
+        document.body.setAttribute('style','');
+      }) ();">Restore Layout</a>
+    </div> -->
+
 <!--= PRIMARY PAGE LAYOUT
-=============================================================-->
+=======================================================================-->
   <body>
-    <!--[if lt IE 7]>
-      <p id="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
+    <!--[if lt IE 8]>
+      <p class="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
+    <h1>Holla!</h1>
+    <h2>Boosh!</h2>
+    <h3>Whoop!</h3>
+    <h4>Blarg!</h4>
+    <h5>Beep!</h5>
+    <h6>Mew!</h6>
 
 <!--= SCRIPTS
-=============================================================-->
+=======================================================================-->
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
 
+
 <!--= GOOGLE ANALYTICS
-=============================================================-->
+=======================================================================-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -77,6 +120,6 @@
     </script>
 
 <!--= END OF DOCUMENT
-=============================================================-->
+=======================================================================-->
   </body>
 </html>
