--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 =======================================================================-->
   <body>
     <!--[if lt IE 8]>
-      <p class="sadbrowser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
+      <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
     <h1>Holla!</h1>
     <h2>Boosh!</h2>
     <h3>Whoop!</h3>
