--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <!-- <link rel="stylesheet" type="text/css" href="public/css/main.min.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="public/css/style.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="public/css/style.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="public/css/alimations.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="public/css/alimations.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="public/css/design_tests.css">
+    <!-- <link rel="stylesheet" type="text/css" href="public/css/design_tests.css"> -->
 
 <!--= TOOLBAR FAVICON
 =======================================================================-->
@@ -58,8 +58,16 @@
 
 <!--= DESIGN TESTS
 =======================================================================-->
-    <!--===== ONLY UNCOMMENT FOR DESIGN TESTING =====-->
-<!--     <div class="design_test">
+    <!--===== Only uncomment for design testing =====-->
+    <!-- <div class="design_test">
+      <a class="test_button" href="javascript: (function() {
+        document.body.setAttribute('style',
+          'filter: url(data: image/svg+xml;
+          base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxmaWx0ZXIgaWQ9J2JsdXInPjxmZUdhdXNzaWFuQmx1ciBzdGREZXZpYXRpb249JzEwJyAvPjwvZmlsdGVyPjwvc3ZnPg%3D%3D#blur);
+          -webkit-filter:blur(10px);
+          filter: blur(10px);'
+        );
+      }) ();">Blur Test</a>
       <a class="test_button" href="javascript: (function() {
         document.body.setAttribute('style',
           'filter: url(data: image/svg+xml;
@@ -69,14 +77,6 @@
           filter: grayscale(1);'
         );
       }) ();">Desaturation Test</a>
-      <a class="test_button" href="javascript: (function() {
-        document.body.setAttribute('style',
-          'filter: url(data: image/svg+xml;
-          base64, PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxmaWx0ZXIgaWQ9J2JsdXInPjxmZUdhdXNzaWFuQmx1ciBzdGREZXZpYXRpb249JzEwJyAvPjwvZmlsdGVyPjwvc3ZnPg%3D%3D#blur);
-          -webkit-filter:blur(10px);
-          filter: blur(10px);'
-        );
-      }) ();">Blur Test</a>
       <a class="test_button" href="javascript: (function () {
         document.body.setAttribute('style',
           '-webkit-transform:rotate(180deg);
@@ -91,18 +91,169 @@
 
 <!--= PRIMARY PAGE LAYOUT
 =======================================================================-->
-  <body>
+  <body class="landing">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
-    <h1>Holla!</h1>
-    <h2>Boosh!</h2>
-    <h3>Whoop!</h3>
-    <h4>Blarg!</h4>
-    <h5>Beep!</h5>
-    <h6>Mew!</h6>
+
+      <!-- Banner -->
+      <header id="banner" class="grid">
+        <div class="grid__col--12 panel--padded--centered">
+          <a href="index.html">
+            <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
+              Something about liking to build things, & how I think dinosaurs are cool. Holla!</h1></a>
+        </div>
+      </header>
+
+      <!-- <aside role="navigation">
+        SIDEBAR HOOK
+      </aside> -->
+
+      <!-- Blurb -->
+      <section id="blurb" class="grid">
+        <div class="grid__col--12 panel--centered">
+          <header>
+            <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
+            <p>You've got an ugly butt, and it's stupid, butt!  Oh!<br>
+              Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
+              Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+          </header>
+        </div>
+      </section>
+
+      <!-- About -->
+      <section id="about" class="grid">
+        <div class="grid__col--5">
+          VECTOR ICONS HOOK
+        </div>
+
+        <div class="grid__col--6">
+          <header>
+            <h2 class="headline-secondary--grouped">About me as a person</h2>
+          </header>
+          <p>Everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
+            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
+            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
+            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!</p>
+        </div>
+      </section>
+
+      <!-- Experience -->
+      <section id="experience" class="grid">
+        <div class="grid__col--6">
+          <header>
+            <h2 class="headline-secondary--grouped">I have Experience in life</h2>
+          </header>
+          <p>Banana banana banana banana banana banana banana banana banana banana banana banana banana banana banana banana banana banana banana.<br>
+          Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
+          LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
+        </div>
+
+        <div class="grid__col--5">
+          <span>
+            <img class="img--avatar" src="public/images/test_picture_01.jpg" alt="">
+          </span>
+        </div>
+      </section>
+
+      <!-- Tools -->
+      <section class="grid panel--centered">
+        <div class="grid__col--12">
+          <header>
+            <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
+          </header>
+          <h3>Digital</h3>
+          <p>
+            Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
+          </p>
+
+          <h3>Physical</h3>
+          <p>
+            Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
+          </p>
+
+          <h3>Other</h3>
+          <p>
+            Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
+          </p>
+        </div>
+      </section>
+
+        <!-- Projects -->
+      <section id="projects" class="grid">
+        <div class="grid__col--12">
+          <header>
+            <h2 class="headline-secondary--grouped">Projects</h2>
+          </header>
+
+          <div class="grid__col--12 panel--centered">
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test_picture_04.jpg" alt="" /></a>
+              <h3>Project One</h3>
+              <p>And we will never be alone again, 'Cause it doesn't happen every day</p>
+            </article>
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test_picture_05.jpg" alt="" /></a>
+              <h3>Project Two</h3>
+              <p>Kinda counted on you being a friend, Can I give it up or give it away</p>
+            </article>
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test_picture_06.jpg" alt="" /></a>
+              <h3>Project Three</h3>
+              <p>Now I thought about what I wanna say, But I never really know where to go</p>
+            </article>
+          </div>
+
+
+
+          <ul class="actions">
+            <li><a href="#" class="button">Full Portfolio</a></li>
+          </ul>
+
+        </div>
+      </section>
+
+
+
+
+      <footer role="contentinfo" id="footer">  <!-- Footer -->
+        <ul class="icons">
+          <li>
+            <a href="#" class="icon fa-twitter">
+              <span class="label">Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fa-facebook">
+              <span class="label">Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fa-instagram">
+              <span class="label">Instagram</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fa-dribbble">
+              <span class="label">Dribbble</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fa-envelope-o">
+              <span class="label">Email</span>
+            </a>
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; Ali Esmaili</li>
+          <li>Design: <a href="index.html">SuitAndCape</a></li>
+        </ul>
+      </footer>
+
+    <!-- </div> -->
 
 <!--= SCRIPTS
 =======================================================================-->
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
 
@@ -110,13 +261,13 @@
 <!--= GOOGLE ANALYTICS
 =======================================================================-->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    //   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    //   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    //   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    //   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      // ga('create', 'UA-61163251-1', 'auto');
-      ga('send', 'pageview');
+    //   ga('create', 'UA-61163251-1', 'auto');
+    //   ga('send', 'pageview');
     </script>
 
 <!--= END OF DOCUMENT
