Include sidebar skeleton, add sass-cache to gitignore

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
       <!-- Banner -->
-      <header id="banner" class="grid">
+      <header role="banner" id="banner" class="grid">
         <div class="grid__col--12 panel--padded--centered">
           <a href="index.html">
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
@@ -104,9 +104,43 @@
         </div>
       </header>
 
-      <!-- <aside role="navigation">
-        SIDEBAR HOOK
-      </aside> -->
+      <!-- Sidebar -->
+      <aside role="navigation" id="sidebar" class="grid">
+        <h1>
+          <a href="index.html">SuitAndCape</a>
+        </h1>
+        <nav id="nav">
+          <ul>
+            <li>
+              <a href="#" class="menu-toggle">
+                <span>Menu</span>
+              </a>
+              <div id="menu">
+                <ul>
+                  <li class="nav__item">
+                    <a href="index.html">Home</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="about.html">About</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="projects.html">Projects</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="resume.html">Résumé</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="links.html">Links</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="flyer.html">Flyer</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </nav>
+      </aside>
 
       <!-- Blurb -->
       <section id="blurb" class="grid">
@@ -202,8 +236,6 @@
               <p>Now I thought about what I wanna say, But I never really know where to go</p>
             </article>
           </div>
-
-
 
           <ul class="actions">
             <li><a href="#" class="button">Full Portfolio</a></li>
