Fix collapsed state

--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
         <h1>
           <a href="index.html">SuitAndCape</a>
         </h1>
-        <nav id="nav">
+        <nav id="nav" class="navbar">
           <ul>
             <li>
               <a href="#" class="menu-toggle">
-                <span>Menu</span>
+                <!-- <span>Menu</span> -->
+                <span id="toggle" class="icn--nav-toggle is-displayed-mobile"><b class="srt">Menu</b></span>
               </a>
               <div id="menu">
                 <ul>
@@ -212,7 +213,7 @@
         </div>
       </section>
 
-        <!-- Projects -->
+      <!-- Projects -->
       <section id="projects" class="grid">
         <div class="grid__col--12">
           <header>
@@ -238,50 +239,46 @@
           </div>
 
           <ul class="actions">
-            <li><a href="#" class="button">Full Portfolio</a></li>
+            <li><a href="#" class="button">Projects Page</a></li>
           </ul>
 
         </div>
       </section>
 
-
-
-
-      <footer role="contentinfo" id="footer">  <!-- Footer -->
+      <!-- Footer -->
+      <footer role="contentinfo" id="footer" class="grid">
         <ul class="icons">
           <li>
-            <a href="#" class="icon fa-twitter">
+            <a href="#" class="icon fav--email">
+              <span class="label">Email</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fav--linkedin">
+              <span class="label">LinkedIn</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fav--github">
+              <span class="label">Github</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon fav--twitter">
               <span class="label">Twitter</span>
             </a>
           </li>
           <li>
-            <a href="#" class="icon fa-facebook">
-              <span class="label">Facebook</span>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="icon fa-instagram">
-              <span class="label">Instagram</span>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="icon fa-dribbble">
+            <a href="#" class="icon fav--dribbble">
               <span class="label">Dribbble</span>
             </a>
           </li>
-          <li>
-            <a href="#" class="icon fa-envelope-o">
-              <span class="label">Email</span>
-            </a>
-          </li>
         </ul>
+
         <ul class="copyright">
           <li>&copy; Ali Esmaili</li>
-          <li>Design: <a href="index.html">SuitAndCape</a></li>
         </ul>
       </footer>
-
-    <!-- </div> -->
 
 <!--= SCRIPTS
 =======================================================================-->
